# KEngineX

./: .gitignore  CMakeLists.txt
AssetLib/: AssetManager.cpp  AssetManager.h  CMakeLists.txt  FBXLoaderHelper.cpp  FBXLoaderHelper.h  ObjLoaderHelper.cpp  ObjLoaderHelper.h
Assets/Shaders/: PixelShader1.fxc  color_pass_gbuffer_ps.hlsl  color_pass_ps.hlsl  color_pass_vs.hlsl  common.hlsli  shadow_map_pass_vs.hlsl  ui_ps.hlsl  ui_vs.hlsl  (+3 more)
Framework/: CMakeLists.txt  EngineConfig.h  IDataType.cpp  IDataType.h  IModule.h  INoCopy.h  IRenderer.h  KLogger.cpp  KLogger.h  Utility.h  Win32Application.cpp  Win32Application.h
GamePlay/: CMakeLists.txt  GameActor.cpp  GameActor.h  GameCamera.cpp  GameCamera.h  GameDirector.cpp  GameDirector.h  GameInput.cpp  GameInput.h  GameMesh.cpp  GameMesh.h  GameScene.cpp  GameScene.h  GameUIActor.cpp  GameUIActor.h  SceneNode.cpp  SceneNode.h
Renderer/: CMakeLists.txt  DX12Color.cpp  DX12ColorBuffer.cpp  DX12ColorBuffer.h  DX12ComandBuffer.h  DX12DepthBuffer.cpp  DX12DepthBuffer.h  DX12GpuBuffer.cpp  DX12GpuBuffer.h  DX12GpuDevice.cpp  DX12GpuDevice.h  DX12GpuResource.h  DX12PixelBuffer.cpp  DX12PixelBuffer.h  DX12RenderContext.cpp  DX12RenderContext.h  DX12RenderGraphPass.cpp  DX12RenderGraphPass.h  DX12Renderer.cpp  DX12Renderer.h  DX12RendererConfig.h  DX12RendererConstants.h  DX12Texture.cpp  DX12Texture.h  DX12TransferManager.cpp  DX12TransferManager.h  DX12UniformBuffer.h  DX12VertexBuffer.h  DXSampleHelper.h  Utility.cpp  Utility.h  d3dx12.h
WorldEditor/: CMakeLists.txt  Win32Application.cpp  Win32Application.h  world_editor.cpp
(+9 files in other folders)
